--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <h1>Projects</h1>
 <a href="https://metamysteries8.github.io/projects/fileview.html" title="File Viewer" target = "_self">File Viewer</a>
 <a href="https://metamysteries8.github.io/projects/sc.html" title="Screen Recorder" target = "_self">Screen Recorder</a>
+ <a href="https://metamysteries8.github.io/projects/doxmeme.html" title="Ip Dox Meme" target = "_self">Ip Dox Meme (no info is sent to me)</a>
 <marquee> More Coming Soon! </marquee>
  
  
