--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <a href="https://metamysteries8.github.io/projects/fileview.html" title="File Viewer" target = "_self">File Viewer</a>
 <a href="https://metamysteries8.github.io/projects/sc.html" title="Screen Recorder" target = "_self">Screen Recorder</a>
  <a href="https://metamysteries8.github.io/projects/doxmeme.html" title="Ip Dox Meme" target = "_self">Ip Dox Meme (no info is sent to me)</a>
+ <a href="https://metamysteries8.github.io/projects/wvrt.html" title="Web Vr Test" target = "_self">Web Vr Test</a>
 <marquee> More Coming Soon! </marquee>
  
  
