--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <a href="https://metamysteries8.github.io/projects/sc.html" title="Screen Recorder" target = "_self">Screen Recorder</a>
  <a href="https://metamysteries8.github.io/projects/doxmeme.html" title="Ip Dox Meme" target = "_self">Ip Dox Meme (no info is sent to me)</a>
  <a href="https://metamysteries8.github.io/projects/wvrt.html" title="Web Vr Test" target = "_self">Web Vr Test</a>
-<marquee> More Coming Soon! </marquee>
+<marquee> More Coming Soon! Be Ready!</marquee>
  
  
 </body>
