--- a/projects/sc.html
+++ b/projects/sc.html
@@ -30,6 +30,7 @@
   </head>
   <body>
     <h1>ScreenRecorder</h1>
+    <h2>This tool is moving to a new site, with a new name, and may return here some time soon.</h2>
     <video id="video" autoplay></video>
     <button id="start">Start Recording</button>
     <script>
